[gd_scene load_steps=7 format=3 uid="uid://bd0o3k4culpe6"]

[ext_resource type="Theme" uid="uid://b7q6nhv8tdmuy" path="res://assets/themes/default_theme.tres" id="1_viw6y"]
[ext_resource type="Script" path="res://scenes/player_label/player_label.gd" id="2_ump5i"]
[ext_resource type="Texture2D" uid="uid://cyw1137uj0mt6" path="res://assets/sprites/menus/crown.png" id="3_7paes"]
[ext_resource type="PackedScene" uid="uid://cngn2fc6gmij0" path="res://assets/sprites/select_sprites/select_character.tscn" id="4_g36e4"]

[sub_resource type="SystemFont" id="SystemFont_lljxp"]

[sub_resource type="SystemFont" id="SystemFont_n5sm1"]

[node name="PlayerLabel" type="HBoxContainer"]
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_viw6y")
theme_override_constants/separation = 25
script = ExtResource("2_ump5i")

[node name="Player" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="NameLabel" type="Label" parent="Player"]
layout_mode = 2
text = "Player"

[node name="Crown" type="HBoxContainer" parent="Player"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="Player/Crown"]
position = Vector2(11, 15)
scale = Vector2(0.0245354, 0.0295224)
texture = ExtResource("3_7paes")

[node name="Label" type="Label" parent="Player/Crown"]
layout_mode = 2
text = "  "

[node name="KickButton" type="Button" parent="Player"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_color = Color(0.941176, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0.941176, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.566092, 1.38376e-06, 3.36915e-07, 1)
theme_override_colors/font_focus_color = Color(0.564706, 0, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(0.448949, 1.96133e-06, 1.15514e-06, 1)
text = "X"

[node name="Character" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="BackCharacter" type="Button" parent="Character"]
layout_mode = 2
focus_neighbor_right = NodePath("../NextCharacter")
mouse_default_cursor_shape = 2
theme_override_fonts/font = SubResource("SystemFont_lljxp")
action_mode = 0
text = "<"

[node name="Padding" type="Label" parent="Character"]
layout_mode = 2
text = " "

[node name="CharacterContainer" type="Control" parent="Character"]
layout_mode = 2

[node name="SelectCharacter" parent="Character/CharacterContainer" instance=ExtResource("4_g36e4")]
position = Vector2(10, -1)

[node name="Padding2" type="Label" parent="Character"]
layout_mode = 2
text = "   "

[node name="NextCharacter" type="Button" parent="Character"]
layout_mode = 2
focus_neighbor_left = NodePath("../BackCharacter")
mouse_default_cursor_shape = 2
theme_override_fonts/font = SubResource("SystemFont_n5sm1")
action_mode = 0
text = ">"

[connection signal="pressed" from="Player/KickButton" to="." method="_on_kick_button_pressed"]
[connection signal="pressed" from="Character/BackCharacter" to="." method="_on_back_character_pressed"]
[connection signal="pressed" from="Character/NextCharacter" to="." method="_on_next_character_pressed"]
